--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Codigo binario",
-  "description": "Blog sobre tecnologia y videojuegos",
-  "author": "Christian Hernandez",
+  "name": "gatsby-starter-delog",
+  "description": "A simplified blog for developers and designer. This starter built with Gatsby and Netlify CMS",
+  "author": "W3Layouts Team <info@w3layouts.com>",
   "version": "1.6.0",
   "license": "MIT",
   "bugs": {
